src/test/ui/issues/20000-29999/issue-23041.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-23041.rs:6:22
   |
LL |     b.downcast_ref::<fn(_)->_>();
   |                      ^^^^^^^^ cannot infer type

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
